--- a/src/main/WebApp/index.html
+++ b/src/main/WebApp/index.html
@@ -4,6 +4,7 @@
     <title>Asucrea | Store</title>
     <meta name="description" content="This is the description">
     <link rel="stylesheet" href="styles.css"/>
+<!--    //async zodat de js script in de achtergrond draait.-->
     <script src="store.js" async></script>
 </head>
 <body>
@@ -46,7 +47,7 @@
     </div>
     <div class="shop-item">
         <span class="shop-item-title">Palasanto Holy Wood</span>
-        <img class="shop-item-image" src="ShopItemPictures/smudgeStickBundle.jpg" alt="smudgeStickSingle">
+        <img class="shop-item-image" src="ShopItemPictures/palasanto.jpg" alt="smudgeStickSingle">
         <div class="shop-item-details">
             <span class="shop-item-price">€3.99</span>
             <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
